--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,32 @@
-<!DOCTYPE html>
-<html lang=en-CA>
+{% extends "base.html" %}
 
-<head>
+{%- block head -%}
   <!-- Meta -->
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <meta name="theme-color" content="#e6eff5">
+  <meta charset=utf-8>
+  <meta content="IE=edge" http-equiv=X-UA-Compatible>
+  <meta name=viewport content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <meta name=theme-color content="#e6eff5">
 
   <!-- Site -->
   <title>Hannah & Zakhary's Wedding</title>
-  <meta name="description" content="Hannah & Zakhary's Wedding, taking place at 6 June, 2023.">
+  <meta content="Hannah & Zakhary's Wedding, taking place at 6 June, 2023." name=description>
 
   <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Allura">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cabin">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Code">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Joan">
+  <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Allura">
+  <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Cabin">
+  <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Fira+Code">
+  <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Joan">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-color/1.9.1/open-color.min.css">
-  <link rel="stylesheet" href="/style.css">
-</head>
+  <link rel=stylesheet href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel=stylesheet href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel=stylesheet href="https://cdnjs.cloudflare.com/ajax/libs/open-color/1.9.1/open-color.min.css">
+  <link rel=stylesheet href="/style.css">
+{%- endblock -%}
 
-<body>
-  <header class="header">
+{%- block header -%}
     <svg class="flourish">
       <use href="/assets/svg/flowers-left.svg#layer-1"></use>
     </svg>
@@ -44,10 +42,19 @@
     <svg class="flourish">
       <use href="/assets/svg/flowers-right.svg#layer-1"></use>
     </svg>
-  </header>
+{%- endblock -%}
 
-  <main role="main">
-    <article class="content">
+{%- block footer -%}
+    <p>
+      We hope to see you there!
+    </p>
+    <br>
+    <p class="copyright">
+      <small>&copy; 2022 Kaplan</small>
+    </p>
+{%- endblock -%}
+
+{%- block content -%}
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pulvinar ligula eget leo dapibus interdum. Sed
         scelerisque non lacus eget suscipit. Maecenas sed tortor arcu. Nullam non purus accumsan, sodales augue et,
@@ -93,18 +100,4 @@
         vel. Mauris id ornare quam. Duis lobortis eu justo nec tempus. Ut ac ipsum bibendum, finibus orci id, aliquam
         nisl.
       </p>
-    </article>
-  </main>
-
-  <footer class="footer">
-    <p>
-      We hope to see you there!
-    </p>
-    <br>
-    <p class="copyright">
-      <small>&copy; 2022 Kaplan</small>
-    </p>
-  </footer>
-</body>
-
-</html>
+{%- endblock -%}
