style(html): update quotes

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 
 {%- block head -%}
   <!-- Meta -->
-  <meta charset=utf-8>
-  <meta content="IE=edge" http-equiv=X-UA-Compatible>
-  <meta name=viewport content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <meta name=theme-color content="#e6eff5">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=7,8,edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="theme-color" content="#e6eff5">
 
   <!-- Site -->
   <title>Hannah & Zakhary's Wedding</title>
@@ -14,16 +14,16 @@
   <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Allura">
-  <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Cabin">
-  <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Fira+Code">
-  <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Joan">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Allura">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cabin">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Code">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Joan">
 
   <!-- CSS -->
-  <link rel=stylesheet href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel=stylesheet href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel=stylesheet href="https://cdnjs.cloudflare.com/ajax/libs/open-color/1.9.1/open-color.min.css">
-  <link rel=stylesheet href="/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-color/1.9.1/open-color.min.css">
+  <link rel="stylesheet" href="/style.css">
 {%- endblock -%}
 
 {%- block header -%}
