feat: update font

--- a/www/style.css
+++ b/www/style.css
@@ -599,7 +599,7 @@ footer.footer {
   --color-user-warn: var(--oc-yellow-7);
   --color-user-debug: var(--oc-blue-7);
   --color-user-trace: var(--oc-cyan-7);
-  --font-family-cursive: "Allura";
+  --font-family-cursive: "Corinthia";
   --font-family-mono: "Fira Code";
   --font-family-sans: "Cabin";
   --font-family-serif: "Joan";
