fix: incorrect font rendering

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
       <use href="/assets/svg/flowers-left.svg#layer-1"></use>
     </svg>
     <div>
-      <h1 class="font cursive">
+      <h1 class="font cursive normal">
         Hannah & Zakhary
       </h1>
       <hr>
