feat: adjust header

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
       <h1 class="font cursive normal">
         Hannah & Zakhary
       </h1>
-      <hr>
+      <hr style="margin-top: -12px;">
       <p>
         2023.06.06
       </p>
